@@ -1,4 +1,4 @@
-.TH HDPARM 8 "October 2006" "Version 6.7"
+.TH HDPARM 8 "October 2006" "Version 6.8"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
